infra/base/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: the-company
  labels:
    app.kubernetes.io/name: core
    app.kubernetes.io/part-of: the-company
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: core
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
